Day_8 Part_2: Add css to the html file removed css file also decommented function call for part_1

--- a/day8/index.html
+++ b/day8/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
@@ -27,4 +26,23 @@
       }
     };
   </script>
+  <style>
+    .grid {
+      background-color: red;
+      border: 5px black;
+      position: relative;
+      margin: 2px;
+      display: flex;
+      justify-content: space-around;
+      height: 28px;
+      width: 24px;
+    }
+
+    .container {
+      margin: 0px 80px 80px 80px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+  </style>
 </html>
